--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
@@ -102,3 +102,78 @@ h2{
   vertical-align: top;
   -webkit-font-smoothing: antialiased;
 }
+
+// Dashboard 
+
+.vacancies-summary {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: block;
+    li {
+        margin: 0;
+        padding: 0 10px;
+        display: block;
+        float: left;
+        a {
+            text-decoration: none;
+        }
+        figure.data {
+            .count {
+                @include bold-48( $tabular-numbers: true );
+                margin-bottom: 0;
+                @media screen and ( max-width: 640px ) {
+                    padding: .25em 0;
+                    @include bold-48( $tabular-numbers: true );
+                }
+                @media screen and ( max-width: 768px ) {
+                    @include bold-48( $tabular-numbers: true );
+                    vertical-align: middle;
+                    display: inline-block;
+                    margin-right: 10px;
+                }
+                @media screen and ( min-width: 769px ) {
+                    text-align: center;                        
+                }
+            }
+            figcaption {
+                display: block;
+                @media screen and ( max-width: 768px ) {
+                    vertical-align: middle;
+                    display: inline-block;
+                    margin-right: 10px;
+                }
+                h2 {
+                    @include bold-16;
+                    margin-bottom: 0;
+                    @media screen and ( max-width: 640px ) {
+                        @include bold-16;
+                    }
+                    @media screen and ( min-width: 769px ) {
+                        text-align: center;                        
+                    }
+                }
+            }
+            figcaption.underline {
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
+.vacancies-summary {
+    li {
+        @media screen and ( max-width: 640px ) {
+            padding: 0 10px;
+            width: ( 100% / 1 );
+        }
+        @media screen and ( min-width: 641px ) and ( max-width: 768px ) {
+            padding: 0 10px 0 0;
+            width: ( 100% / 2 );
+        }
+        @media screen and ( min-width: 769px ) {
+            padding: 0 10px 0 0;
+            width: ( 100% / 4 );
+        }
+    }
+}
