--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -1,5 +1,6 @@
 ﻿@using SFA.Apprenticeships.Infrastructure.Presentation
 @using SFA.Apprenticeships.Web.Manage.Constants
+@using SFA.Apprenticeships.Web.Manage.ViewModels
 @model SFA.Apprenticeships.Web.Manage.ViewModels.HomeViewModel
 
 @{
@@ -36,6 +37,85 @@
         }
     </div>
 
+    <section class="grid-wrapper">
+        @{
+            var filterType = Model.VacancySummaries.SearchViewModel.FilterType;
+        }
+        <h2 class="heading-medium">
+            Your vacancies
+            @if (filterType != DashboardVacancySummaryFilterTypes.All)
+            {
+                <span>&nbsp;<a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.VacancySummaries.SearchViewModel, DashboardVacancySummaryFilterTypes.All))" class="font-small vacancy-filter">Show all</a></span>
+            }
+        </h2>
+        <ul class="vacancies-summary">
+            <li>
+                <figure class="data">
+                    @if (filterType == DashboardVacancySummaryFilterTypes.SubmittedToday)
+                    {
+                        <p class="count">@Model.VacancySummaries.SubmittedTodayCount</p>
+                        <figcaption><h2>Submitted today</h2></figcaption>
+                    }
+                    else
+                    {
+                        <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.VacancySummaries.SearchViewModel, DashboardVacancySummaryFilterTypes.SubmittedToday))" class="vacancy-filter">
+                            <p class="count">@Model.VacancySummaries.SubmittedTodayCount</p>
+                            <figcaption><h2>Submitted today</h2></figcaption>
+                        </a>
+                    }
+                </figure>
+            </li>
+            <li>
+                <figure class="data">
+                    @if (filterType == DashboardVacancySummaryFilterTypes.SubmittedYesterday)
+                    {
+                        <p class="count">@Model.VacancySummaries.SubmittedYesterdayCount</p>
+                        <figcaption><h2>Submitted yesterday</h2></figcaption>
+                    }
+                    else
+                    {
+                        <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.VacancySummaries.SearchViewModel, DashboardVacancySummaryFilterTypes.SubmittedYesterday))" class="vacancy-filter">
+                            <p class="count">@Model.VacancySummaries.SubmittedYesterdayCount</p>
+                            <figcaption><h2>Submitted yesterday</h2></figcaption>
+                        </a>
+                    }
+                </figure>
+            </li>
+            <li>
+                <figure class="data">
+                    @if (filterType == DashboardVacancySummaryFilterTypes.SubmittedMoreThan48Hours)
+                    {
+                        <p class="count">@Model.VacancySummaries.SubmittedMoreThan48HoursCount</p>
+                        <figcaption><h2>Submitted +48 hours</h2></figcaption>
+                    }
+                    else
+                    {
+                        <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.VacancySummaries.SearchViewModel, DashboardVacancySummaryFilterTypes.SubmittedMoreThan48Hours))" class="vacancy-filter">
+                            <p class="count">@Model.VacancySummaries.SubmittedMoreThan48HoursCount</p>
+                            <figcaption><h2>Submitted +48 hours</h2></figcaption>
+                        </a>
+                    }
+                </figure>
+            </li>
+            <li>
+                <figure class="data">
+                    @if (filterType == DashboardVacancySummaryFilterTypes.Resubmitted)
+                    {
+                        <p class="count">@Model.VacancySummaries.ResubmittedCount</p>
+                        <figcaption><h2>Resubmitted vacancies</h2></figcaption>
+                    }
+                    else
+                    {
+                        <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.VacancySummaries.SearchViewModel, DashboardVacancySummaryFilterTypes.Resubmitted))" class="vacancy-filter">
+                            <p class="count">@Model.VacancySummaries.ResubmittedCount</p>
+                            <figcaption><h2>Closing soon</h2></figcaption>
+                        </a>
+                    }
+                </figure>
+            </li>
+        </ul>
+    </section>
+
     <div class="grid-wrapper">
         <div class="grid grid-1-1">
             <div class="inner-block-padr">
@@ -64,7 +144,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                            @foreach (var vacancy in Model.Vacancies)
+                            @foreach (var vacancy in Model.VacancySummaries.Vacancies)
                             {
                                 <tr>
                                     <td>
