--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/TrainingDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/TrainingDetails.cshtml
@@ -68,7 +68,7 @@
                     }
                     else
                     {
-                        <button id="selectFramework" type="submit" class="button-link" name="BasicDetails" value="SelectFramework">Framework</button>
+                        <button id="selectFramework" type="submit" class="button-link" name="TrainingDetails" value="SelectFramework">Framework</button>
                     }
 
                     @if (isStandard)
@@ -77,7 +77,7 @@
                     }
                     else
                     {
-                        <button id="selectStandard" type="submit" class="button-link" name="BasicDetails" value="SelectStandard">Standard</button>
+                        <button id="selectStandard" type="submit" class="button-link" name="TrainingDetails" value="SelectStandard">Standard</button>
                     }
                 </div>
             </noscript>
