Adding missing Training to be Provided input

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/TrainingDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/TrainingDetails.cshtml
@@ -154,6 +154,12 @@
     </div>
 
     <div class="form-group">
+        @Html.FormTextAreaFor(m => m.TrainingProvided, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
+        @Html.EditorFor(m => m.TrainingProvidedComment, "Comment", Html.GetLabelFor(m => m.TrainingProvidedComment))
+        @Html.ValidationMessageFor(m => m.TrainingProvidedComment)
+    </div>
+
+    <div class="form-group">
         <h3 class="heading-small">Contact details for candidate</h3>
 
         @Html.FormTextFor(
