--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/VacancyPreview.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/VacancyPreview.cshtml
@@ -570,9 +570,16 @@
                     Contact
                     @Html.Partial(CommentViewModel.PartialIconView, Html.GetCommentViewModel(Model, m => m.TrainingDetailsViewModel.ContactName, Model.TrainingDetailsViewModel.ContactDetailsComment, Model.TrainingDetailsLink))
                 </h3>
-                <p class="small-btm-margin">@Model.TrainingDetailsViewModel.ContactName</p>
-                <p class="small-btm-margin">@Model.TrainingDetailsViewModel.ContactNumber</p>
-                <p class="small-btm-margin">@Model.TrainingDetailsViewModel.ContactEmail</p>
+                @if (string.IsNullOrEmpty(Model.TrainingDetailsViewModel.ContactName) && string.IsNullOrEmpty(Model.TrainingDetailsViewModel.ContactNumber) && string.IsNullOrEmpty(Model.TrainingDetailsViewModel.ContactEmail))
+                {
+                    <span>None specified. This message will not appear on the vacancy when it goes live</span>
+                }
+                else
+                {
+                    <p class="small-btm-margin">@Model.TrainingDetailsViewModel.ContactName</p>
+                    <p class="small-btm-margin">@Model.TrainingDetailsViewModel.ContactNumber</p>
+                    <p class="small-btm-margin">@Model.TrainingDetailsViewModel.ContactEmail</p>
+                }
                 @Html.Partial(EditLinkViewModel.PartialView, Html.GetEditLinkViewModel(Model, m => m.TrainingDetailsViewModel.ContactName, Model.TrainingDetailsLink, Model.TrainingDetailsViewModel.ContactDetailsComment))
             </div>
         }
