Implemented validator and fixed unit test

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/TrainingDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/TrainingDetails.cshtml
@@ -21,6 +21,7 @@
 
     @Html.HiddenFor(m => m.VacancyReferenceNumber)
     @Html.HiddenFor(m => m.Status)
+    @Html.HiddenFor(m => m.VacancyType)
     @Html.HiddenFor(m => m.ComeFromPreview)
 
     var isAnyTrainingTypeSelected = Model.TrainingType != TrainingType.Unknown;
