--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/RequirementsProspects.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/RequirementsProspects.cshtml
@@ -1,4 +1,5 @@
 ﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.VacancyRequirementsProspectsViewModel
+@using SFA.Apprenticeships.Domain.Entities.Vacancies
 @using SFA.Apprenticeships.Web.Raa.Common.Extensions
 
 @{
@@ -14,6 +15,7 @@
 
 @Html.HiddenFor(m => m.VacancyReferenceNumber)
 @Html.HiddenFor(m => m.Status)
+@Html.HiddenFor(m => m.VacancyType)
 @Html.HiddenFor(m => m.ComeFromPreview)
 
 <section>
@@ -24,9 +26,17 @@
         @Html.FormTextAreaFor(m => m.PersonalQualities, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
         @Html.EditorFor(m => m.PersonalQualitiesComment, "Comment", Html.GetLabelFor(m => m.PersonalQualitiesComment))
         @Html.ValidationMessageFor(m => m.PersonalQualitiesComment)
-        @Html.FormTextAreaFor(m => m.DesiredQualifications, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
-        @Html.EditorFor(m => m.DesiredQualificationsComment, "Comment", Html.GetLabelFor(m => m.DesiredQualificationsComment))
-        @Html.ValidationMessageFor(m => m.DesiredQualificationsComment)
+        @if (Model.VacancyType == VacancyType.Traineeship)
+        {
+            @Html.HiddenFor(m => m.DesiredQualifications)
+            @Html.HiddenFor(m => m.DesiredQualificationsComment)
+        }
+        else
+        {
+            @Html.FormTextAreaFor(m => m.DesiredQualifications, controlHtmlAttributes: new {@class = "width-all-1-1 form-textarea-medium", type = "text"})
+            @Html.EditorFor(m => m.DesiredQualificationsComment, "Comment", Html.GetLabelFor(m => m.DesiredQualificationsComment))
+            @Html.ValidationMessageFor(m => m.DesiredQualificationsComment)
+        }
         @Html.FormTextAreaFor(m => m.FutureProspects, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
         @Html.EditorFor(m => m.FutureProspectsComment, "Comment", Html.GetLabelFor(m => m.FutureProspectsComment))
         @Html.ValidationMessageFor(m => m.FutureProspectsComment)
